2000-03-17  Akim Demaille  <akim@epita.fr>

	Install the IFS we need once for all.

	* acgeneral.m4 (_AC_INIT_PREPARE_ENVIRONMENT): New macro.
	Handle the NLS envvars, and IFS.
	(_AC_INIT_PREPARE): Use it, no longer set the NLS envvars.
	(_AC_WHICH_A, AC_PATH_PROG): Rely on the default IFS.
	* acspecific.m4 (AC_PROG_INSTALL, AC_FUNC_SELECT_ARGTYPES):
	Likewise.

2000-03-17  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_TRY_CPP, AC_EGREP_CPP, AC_TRY_COMPILE,
	AC_TRY_LINK, AC_TRY_RUN_NATIVE): Simplify the removal of the
	contest files: don't remove them before running the actions, just
	remove them at the end of the macro.

2000-03-16  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_FUNC_SELECT_ARGTYPES): Use
	  : ${foo='some words'}
	not
	  : ${foo=some words}
	since this is not portable: Digital Unix v5.0: `bad substitution'.
	From Nicolas Joly.

2000-3-16  Lars J. Aas  <larsa@sim.no>

	* libm4.m4 (m4_assert, m4_shiftn): New macros.
	(m4_case,m4_match): Rewrite to use m4_shiftn (for readability reasons).
	(m4_for): Add the STEP argument and some argument-verifying asserts.
	(m4_split): Correct spaces to tabulator in regexp.

2000-03-15  Akim Demaille  <akim@epita.fr>

	Revamp AC_FUNC_SELECT_ARGTYPES.

	* acspecific.m4 (AC_FUNC_SELECT_ARGTYPES): Use a single cache
	variable instead of three.
	Use AC_CACHE_CHECK.
	Shorten the name of the var loops, they are no longer cached.
	Include sys/types.h unconditionally.
	`select' returns an int, fixes Autoconf/46.
	Don't display parens in the user messages.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* autoheader.sh: Use run_m4f, not run_m4.

2000-03-14  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* tests/actest.m4 (AC_ENV_SAVE): Don't consider RANDOM and LINENO
	which some shells update.

2000-03-14  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_ARG_ENABLE, AC_ARG_WITH): No use for @%:@ here,
	no need to over quote $1 in the comments.

2000-03-14  Akim Demaille  <akim@epita.fr>
