@@ -55,6 +55,7 @@ John David Anglin	dave@hiauly1.hia.nrc.ca
 John Interrante		interran@uluru.stanford.edu
 John W. Eaton		jwe@bevo.che.wisc.edu
 J"orn Rennecke		amylaar@cygnus.co.uk
+Joseph S. Myers		jsm28@cam.ac.uk
 Julian Onions		j.onions@nexor.co.uk
 Karl Berry		karl@cs.umb.edu
 Karl Heuer		kwzh@gnu.org
